literally anything else >>> roblox api docs

--- a/packages/roblox-api/package.json
+++ b/packages/roblox-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "etc",
+  "name": "roblox-api",
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
@@ -9,7 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client": "6.2.1",
-    "prisma": "^6.2.1"
+    "axios": "^1.7.9",
+    "openid-client": "^5.5.0"
   }
 }
