--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -10,21 +10,39 @@
   },
   "dependencies": {
     "@fontsource/jetbrains-mono": "^5.1.2",
+    "@uiw/react-json-view": "^2.0.0-alpha.30",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "iron-session": "^8.0.4",
+    "jsonwebtoken": "^9.0.2",
+    "ky": "^1.7.4",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.473.0",
+    "motion": "^12.0.1",
     "next": "15.1.4",
-    "openid-client": "^6.1.7",
+    "openblox": "^1.0.59",
+    "openid-client": "^5.5.0",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-json-view": "^1.21.3",
+    "react-json-view-lite": "^2.3.0",
+    "safe-await": "^2.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20",
+    "@types/qs": "^6.9.18",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
