it should work but it breaks

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@fontsource/jetbrains-mono": "^5.1.2",
-    "@uiw/react-json-view": "^2.0.0-alpha.30",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.6",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "iron-session": "^8.0.4",
@@ -18,31 +21,30 @@
     "ky": "^1.7.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
-    "motion": "^12.0.1",
-    "next": "15.1.4",
-    "openblox": "^1.0.59",
-    "openid-client": "^5.5.0",
+    "motion": "^12.0.6",
+    "next": "15.1.6",
+    "openid-client": "^5.7.1",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-json-view": "^1.21.3",
-    "react-json-view-lite": "^2.3.0",
     "safe-await": "^2.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "roblox-api": "workspace:*"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.2.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/lodash": "^4.17.14",
-    "@types/node": "^20",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^20.17.16",
     "@types/qs": "^6.9.18",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.19.0",
     "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
