crash out central

--- a/packages/etc/package.json
+++ b/packages/etc/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@prisma/client": "6.2.1",
     "prisma": "^6.2.1"
+  },
+  "scripts": {
+    "install": "prisma generate"
   }
 }
