--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.6",
     "@types/mdx": "^2.0.13",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "iron-session": "^8.0.4",
@@ -23,14 +24,13 @@
     "lucide-react": "^0.473.0",
     "motion": "^12.0.6",
     "next": "15.1.6",
-    "openid-client": "^5.7.1",
+    "openid-client": "^5.5.0",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "safe-await": "^2.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "roblox-api": "workspace:*"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
