--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
-    "ky": "^1.7.4",
+    "ky": "^1.7.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "motion": "^12.0.6",
@@ -28,6 +28,7 @@
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "safe-await": "^2.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
