--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
   "name": "spawnpoint",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "iron-session": "^8.0.4",
+    "ky": "^1.7.5",
+    "lucide-react": "^0.477.0",
+    "motion": "^12.4.7",
+    "next": "15.2.0",
+    "openid-client": "^6.3.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "workspaces": [
-    "packages/*"
-  ],
-  "patchedDependencies": {
-    "oidc-token-hash@5.1.0": "patches/oidc-token-hash@5.1.0.patch"
+    "@tailwindcss/postcss": "^4",
+    "@types/cookie": "^1.0.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
