--- a/package.json
+++ b/package.json
@@ -9,26 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "iron-session": "^8.0.4",
+    "jsonwebtoken": "^9.0.2",
     "ky": "^1.7.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
+    "mdx": "^0.3.1",
     "motion": "^12.4.7",
     "next": "15.2.0",
     "openid-client": "^6.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
+    "safe-await": "^2.0.0",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/cookie": "^1.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "patchedDependencies": {
+    "ky@1.7.5": "patches/ky@1.7.5.patch"
   }
 }
